Fix homepage layout bugs
#left_column and #right_column on the homepage now have
more sensible values (60/40 split, rather than 75/25).

Also tidied up the gutter alignment, and increased the
padding on the main CTA button.

Fixes #116.

--- a/assets/stylesheets/responsive/custom.scss
+++ b/assets/stylesheets/responsive/custom.scss
@@ -199,14 +199,14 @@ form input[type=submit] {
 a.link_button_green_large {
   font-size: 2.2rem;
   height: inherit;
-  padding: 10px;
+  padding: 0.5em;
   @include ie8 {
-     font-size: 2.2em;
-     height: 66px;
-   }
-   @include lte-ie7 {
-     height: 50px;
-   }
+    font-size: 2.2em;
+    height: 66px;
+  }
+  @include lte-ie7 {
+    height: 50px;
+  }
 }
 
 /* Popups */
@@ -929,12 +929,44 @@ div.controller_help {
 
 
 /* Front page */
-/* Drop the extract indentation on small screens */
-#frontpage_examples .excerpt {
-    padding: 0.2em 0 0 0;
-    @include respond-min( $main_menu-mobile_menu_cutoff ){
-      padding: 0 0 0 2em;
+
+#frontpage_splash {
+  padding: 2em 0;
+  margin-left: $column-gutter * 0.5 * -1;
+  margin-right: $column-gutter * 0.5 * -1;
+
+  h1, h2 {
+    margin-top: 0;
+  }
+
+  #right_column {
+    margin-top: 2em;
+  }
+
+  @include respond-min( $main_menu-mobile_menu_cutoff ){
+    padding: 4em 0 2em 0;
+
+    #left_column {
+      width: 60%;
     }
+
+    #right_column {
+      width: 40%;
+      margin-top: 0;
+    }
+  }
+}
+
+#frontpage_right_to_know {
+  margin-top: 2em;
+}
+
+// Drop the extract indentation on small screens
+#frontpage_examples .excerpt {
+  padding: 0.2em 0 0 0;
+  @include respond-min( $main_menu-mobile_menu_cutoff ){
+    padding: 0 0 0 2em;
+  }
 }
 
 #sign_together {
